--- a/Index.html
+++ b/Index.html
@@ -33,14 +33,14 @@
         </style>
     </head>
     <body>
-        <img src="imgs/logo.gif" class="center-img">
+        <img src="pages/imgs/logo.gif" class="center-img">
         <h1>Лучшие фильмы для новогоднегонастроения!</h1>
         <p>В конце декабря нет ничего лучше, чем укутаться пледом, заварить чай и,</p>
         <p>конечно же, посмотреть классические новогодние фильмы!</p>
         <p>Вот мои рекомендации по фильмам, без которых у меня не проходит ни одной зимы!</p>
-        <p><a href="1.html">Гринч - похититель Рождества</a></p>
-        <p><a href="2.html">Один дома 1 и 2</a></p>
-        <p><a href="3.html">Полярный экспресс</a></p>
-        <p><a href="4.html">Рождество Чарли Брауна</a></p>
+        <p><a href="pages/1.html">Гринч - похититель Рождества</a></p>
+        <p><a href="pages/2.html">Один дома 1 и 2</a></p>
+        <p><a href="pages/3.html">Полярный экспресс</a></p>
+        <p><a href="pages/4.html">Рождество Чарли Брауна</a></p>
     </body>
 </html>
